# MusicLooper

./: .gitignore  CHANGELOG.md  LICENSE  MusicLooper.spec  README.md  gui.py  pyproject.toml  requirements.txt
MusicLooper/: __init__.py  __main__.py  analysis.py  audio.py  cli.py  core.py  gui.py  handler.py  memory_utils.py  playback.py  requirements.txt  setup_and_run.bat  utils.py  youtube.py
MusicLooper/languages/: en.json  zh_TW.json
