[tool.poetry]
name = "musiclooper"
version = "1.2.0"
description = "A Python-based program for automatically finding the best loop points to achieve seamless music looping with a graphical user interface."
packages = [
    { include = "MusicLooper" }
]
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: Qt",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
repository = "https://github.com/AllexaT/Music-Looper"
readme = "README.md"
authors = ["AllexaT <allexat007@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
librosa = "0.10.2"
numpy = ">=1.25.0, <2.0.0"
soundfile = ">=0.12.1"
sounddevice = ">=0.5.0"
numba = ">=0.59.1"
PyQt6 = "^6.4.0"
PyQt6-Qt6 = "^6.4.0"
lazy-loader = ">=0.3"
pyinstaller = "^6.5.0"

[tool.poetry.scripts]
pymusiclooper = 'pymusiclooper.__main__:cli'
build = "scripts.build:main"

[tool.poetry.urls]
"Changelog" = "https://github.com/arkrow/PyMusicLooper/blob/master/CHANGELOG.md"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.ruff]
ignore = ["E501", "E402"]
